creation article section and about

--- a/style.css
+++ b/style.css
@@ -7,38 +7,92 @@
 
 }
 
+html{
+    scroll-behavior: smooth;
+}
+
 @font-face {
     font-family: "DIN Pro" ;
     src: url("./fonts/DINPro.woff2") format("woff2");
     font-style: normal;
 }
 
+.primary_text {
+    font-weight: 900;
+}
 
-/* NAVBAR */
-
-.container{
-    padding: 20px 20px;
-    position: absolute;
+.primary_color{
+    color: #aaa;
 }
 
 
-.logo_text{
-    font-size: 20px;
+
+/* NAVBAR + SECTION */
+
+article{
+    display: flex;
 }
 
-.logo_text ul{
+.container_text {
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+nav {
+    display: flex;
+    flex-direction: column;
+    width: 33%;
+}
+
+ul{
+    font-size: 22px;
     list-style: none;
     cursor: pointer;
     color: #aaa;
-    float: right;
-    position: relative;
 }
 
-.logo_text ul li{
+ul li{
+    text-align: end;
+    font-size: .875rem;
     margin: 10px 0;
+    user-select: none;
 }
 
-.logo_text ul li:hover{
+ul li a{
+    text-decoration: none;
+    color: #aaa;
+}
+
+ul li a:hover{
     color: black;
+}
+
+
+
+
+.container_img {
+    width: 50%;
+}
+.container_img img {
+    width: 60%;
+}
+
+.container_info {
+    align-self: center;
+    display: flex;
+    flex-direction: column;
+    width: 30%;
+}
+
+/* ABOUT SECTION */
+
+section{
+    margin-top: 20%;
+}
+
+.photo img{
+    margin: 100px 40px;
 }
 
