--- a/style.css
+++ b/style.css
@@ -69,9 +69,6 @@ ul li a:hover{
     color: black;
 }
 
-
-
-
 .container_img {
     width: 50%;
 }
@@ -95,4 +92,16 @@ section{
 .photo img{
     margin: 100px 40px;
 }
+
+
+
+/* FOOTER */
+
+
+
+
+
+
+
+
 
