--- a/style.css
+++ b/style.css
@@ -128,3 +128,17 @@ section{
     display: none;
 }
 
+@keyframes fade {
+    0% {
+        opacity: 1;
+    }
+    50% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+    }
+}
+.fade {
+    animation: fade 1s linear;
+}
