--- a/style.css
+++ b/style.css
@@ -88,9 +88,6 @@ ul li a:hover{
     width: 30%;
 }
 
-/* SLIDER */
-
-
 
 /* ABOUT SECTION */
 
@@ -128,6 +125,12 @@ section{
     display: none;
 }
 
+/* ANIMATION */
+
+.fade {
+    animation: fade 1s linear;
+}
+
 @keyframes fade {
     0% {
         opacity: 1;
@@ -138,7 +141,4 @@ section{
     100% {
         opacity: 1;
     }
-}
-.fade {
-    animation: fade 1s linear;
 }
