--- a/style.css
+++ b/style.css
@@ -25,6 +25,33 @@ html{
     color: #aaa;
 }
 
+input[type="radio"] {
+    /* remove standard background appearance */
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    /* create custom radiobutton appearance */
+    display: inline-block;
+    width: 14px;
+    height: 14px;
+    padding: 0px;
+    /* background-color only for content */
+    background-clip: content-box;
+    border: 2px solid #707070;
+    background-color: #fff;
+    border-radius: 50%;
+    margin: 0 5% 0 0;
+  }
+  
+  /* appearance for checked radiobutton */
+  input[type="radio"]:checked {
+    background-color: #B9B9B9;
+  }
+
+  .slides{
+    width: 100%;
+  }
+
 /* NAVBAR + SECTION */
 .navbar_mobile{
 display: none;
@@ -35,20 +62,28 @@ display: none;
 /* NAVBAR + SECTION */
 
 article{
+    justify-content: center;
     display: flex;
+    margin-bottom: 327px;
 }
 
 .container_text {
-    width: 50%;
+    width: 33.2%;
     display: flex;
-    flex-direction: column;
-    justify-content: space-between;
+    justify-content: flex-end;
+
+}
+
+.container_img {
+    width: 33.2%;
 }
 
 nav {
     display: flex;
     flex-direction: column;
-    width: 33%;
+    position: fixed;
+    width: 8.3%;
+    margin-left: 46px;
 }
 
 ul{
@@ -74,18 +109,17 @@ ul li a:hover{
     color: black;
 }
 
-.container_img {
-    width: 50%;
-}
+
 .container_img img {
-    width: 60%;
+    width: 100%;
+    display: block;
 }
 
 .container_info {
     align-self: center;
     display: flex;
     flex-direction: column;
-    width: 30%;
+    width: 50%;
 }
 
 
