--- a/style.css
+++ b/style.css
@@ -40,12 +40,15 @@ input[type="radio"] {
     border: 2px solid #707070;
     background-color: #fff;
     border-radius: 50%;
-    margin: 0 5% 0 0;
   }
   
   /* appearance for checked radiobutton */
   input[type="radio"]:checked {
     background-color: #B9B9B9;
+  }
+
+  input[type="text"]:focus-visible {
+    outline: 0px;
   }
 
   .slides{
@@ -83,13 +86,13 @@ nav {
     flex-direction: column;
     position: fixed;
     width: 8.3%;
+
     margin-left: 46px;
 }
 
 ul{
     font-size: 1.375rem;
     list-style: none;
-    cursor: pointer;
     color: #aaa;
 }
 
@@ -120,6 +123,11 @@ ul li a:hover{
     display: flex;
     flex-direction: column;
     width: 50%;
+}
+
+.contact:hover{
+    background-color: black;
+    color: #fff;
 }
 
 
