--- a/style.css
+++ b/style.css
@@ -17,8 +17,14 @@ html{
     font-style: normal;
 }
 
+@font-face {
+    font-family: "DIN Pro";
+    src: url("./fonts/DINPro-Bold.woff2") format("woff2");
+    font-weight: bold;
+}
+
 .primary_text {
-    font-weight: 900;
+    font-weight: normal;
 }
 
 .primary_color{
@@ -197,4 +203,17 @@ footer {
     100% {
         opacity: 1;
     }
+}
+
+a, a:link, a:hover, a:hover, a:visited {
+    color: black;
+    text-decoration: none;
+}
+
+iframe {
+    max-width: 100%!important;
+}
+
+nav img {
+    width: 100%;
 }
